--- a/source/index.html
+++ b/source/index.html
@@ -39,12 +39,14 @@
           <p class="page-main__title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
         <section class="advantages">
-          <div class="advantages__item advantages-photo">
-            <b class="advantages-photo__title-town">Настоящий городок</b>
-            <p class="advantages-photo__item">№1</p>
-            <p class="advantages-photo__item">Седона не атракцион для туристов, там течет своя жизнь</p>
+          <div class="advantages__wrapper">
+            <div class="advantages__item advantages-photo">
+              <b class="advantages-photo__title-town">Настоящий городок</b>
+              <p class="advantages-photo__item">№1</p>
+              <p class="advantages-photo__item">Седона не атракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <img class="advantages-photo__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото здания в Седоне">
           </div>
-          <img class="advantages-photo__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото здания в Седоне">
           <ul class="advantages__item advantages-list">
             <li class="advantages-list__item">
               <h3 class="advantages-list__title">Жилье</h3>
@@ -59,12 +61,14 @@
               <p class="advantages-list__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
           </ul>
-          <div class="advantages__item advantages-photo">
-            <b class="advantages-photo__title-town">Там есть мост дьявола</b>
-            <p class="advantages-photo__item">№2</p>
-            <p class="advantages-photo__item">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <div class="advantages__wrapper">
+            <div class="advantages__item advantages-photo">
+              <b class="advantages-photo__title-town">Там есть мост дьявола</b>
+              <p class="advantages-photo__item">№2</p>
+              <p class="advantages-photo__item">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="advantages-photo__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото каньона">
           </div>
-          <img class="advantages-photo__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото каньона">
           <ul class="advantages__item advantages-other">
             <li class="advantages-other__item">
               <b class="advantages-other__title-town">Небольшая площадь</b>
@@ -101,7 +105,6 @@
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
       </div>
     </footer>
