--- a/source/photo.html
+++ b/source/photo.html
@@ -36,32 +36,32 @@
         <h1 class="page-photo__title">Фото и видео</h1>
         <p class="page-photo__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политеке и экономике.</p>
         <ul class="page-photo__gallery gallery">
-          <li class="gallery__item--block-1">
-            <figure class="gallery__item">
+          <li class="gallery__item">
+            <figure class="gallery__figure">
               <p class="gallery__item-img"><img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Вечерняя дорога"></p>
               <figcaption class="gallery__description">Народные просторы</figcaption>
               <p class="gallery__author">Автор фото: Борис</p>
               <p class="gallery__like">1350</p>
             </figure>
           </li>
-          <li class="gallery__item--block-2">
-            <figure class="gallery__item">
+          <li class="gallery__item">
+            <figure class="gallery__figure">
               <p class="gallery__item-img"><img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Цветущие кактусы"></p>
               <figcaption class="gallery__description">Местная растительность</figcaption>
               <p class="gallery__author">Автор фото: Сергей</p>
               <p class="gallery__like">143</p>
             </figure>
           </li>
-          <li class="gallery__item--block-3">
-            <figure class="gallery__item">
+          <li class="gallery__item">
+            <figure class="gallery__figure">
               <p class="gallery__item-img"><img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Извилистая дорога"></p>
               <figcaption class="gallery__description">Дорога на север</figcaption>
               <p class="gallery__author">Автор фото: Петр</p>
               <p class="gallery__like">96</p>
             </figure>
           </li>
-          <li class="gallery__item--block-4">
-            <figure class="gallery__item">
+          <li class="gallery__item">
+            <figure class="gallery__figure">
               <p class="gallery__item-img"><img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Вид каньона"></p>
               <figcaption class="gallery__description">Мост дьявола</figcaption>
               <p class="gallery__author">Автор фото: Антон</p>
