--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -38,7 +39,7 @@
           <h2 class="page-main__town-title">Седона - небольшой <br> городок в Аризоне, заслуживающий большего!</h2>
           <p class="page-main__title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
-        <section class="advantages">
+        <section class="page-main__item advantages">
           <div class="advantages__wrapper">
             <div class="advantages__item advantages-photo">
               <b class="advantages-photo__title-town">Настоящий городок</b>
@@ -61,7 +62,7 @@
               <p class="advantages-list__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
           </ul>
-          <div class="advantages__wrapper">
+          <div class="advantages__wrapper advantages__wrapper--bridge">
             <div class="advantages__item advantages-photo">
               <b class="advantages-photo__title-town">Там есть мост дьявола</b>
               <p class="advantages-photo__item">№2</p>
@@ -90,22 +91,24 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__social social">
+      <div class="page-footer__wrapper">
         <b class="page-footer__visit">#Visitsedona</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в Твиттере</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">Мы в Ю-Тюбе</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="#">Мы в Ю-Тюбе</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+        </div>
       </div>
     </footer>
   </body>
