--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
               <p class="advantages-photo__item">№1</p>
               <p class="advantages-photo__item">Седона не атракцион для туристов, там течет своя жизнь</p>
             </div>
-            <img class="advantages-photo__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фото здания в Седоне">
+            <div class="advantages__house"></div>
           </div>
           <ul class="advantages__item advantages-list">
             <li class="advantages-list__item">
@@ -68,7 +68,7 @@
               <p class="advantages-photo__item">№2</p>
               <p class="advantages-photo__item">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="advantages-photo__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото каньона">
+            <div class="advantages__bridge"></div>
           </div>
           <ul class="advantages__item advantages-other">
             <li class="advantages-other__item">
