--- a/source/index.html
+++ b/source/index.html
@@ -42,10 +42,10 @@
             <div class="page-main__background-triangle"></div>
           </div>
           <h1 class="visually-hidden">Преимущества городка Седона</h1>
-          <section class="page-main__item">
+          <div class="page-main__item">
             <h2 class="page-main__town-title">Седона &nbsp;&nbsp;&nbsp;&nbsp;небольшой <br> городок в Аризоне, заслуживающий большего!</h2>
             <p class="page-main__title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-          </section>
+          </div>
           <section class="page-main__item advantages">
             <div class="advantages__wrapper">
               <div class="advantages__item advantages-photo">
