--- a/source/photo.html
+++ b/source/photo.html
@@ -50,7 +50,7 @@
                   <picture>
                     <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                    <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Вечерняя дорога">
+                    <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Вечерняя дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -65,8 +65,8 @@
                 <p class="gallery__item-img">
                   <picture>
                     <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactust-tablet@2x.jpg 2x">
-                    <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Цветущие кактусы">
+                    <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                    <img src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Цветущие кактусы">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -82,7 +82,7 @@
                   <picture>
                     <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                    <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Извилистая дорога">
+                    <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" width="280" height="280" alt="Извилистая дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -98,7 +98,7 @@
                   <picture>
                     <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                    <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Вид каньона">
+                    <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Вид каньона">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
