добавил заглушки для попапов

--- a/source/form.html
+++ b/source/form.html
@@ -167,6 +167,10 @@
           </div>
         </div>
       </footer>
+      <div class="popup-failure">
+      </div>
+      <div class="popup-succes">
+      </div>
     </div>
     <script src="js/script.js"></script>
   </body>
