--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,11 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <svg style="display: none;">
+      <symbol id="htmlacademy" viewBox="0 0 60 60">
+        <path fill="currentColor" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+      </symbol>
+    </svg>
     <div class="wrapper-shadow">
       <header class="wrapper-shadow__item page-header">
         <div class="page-header__wrapper">
@@ -41,6 +46,88 @@
           <div class="page-form__promo">
             <div class="page-form__background-triangle"></div>
           </div>
+          <h1 class="visually-hidden">Обратная связь</h1>
+          <div class="page-form__item">
+            <h2 class="page-form__title">Оставьте свой отзыв</h2>
+            <p class="page-form__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+          </div>
+          <section class="page-form__item feedback">
+            <h2 class="visually-hidden">Ваше сообщение</h2>
+            <div class="feedback-container">
+              <form class="feedback__item form" action="https://echo.htmlacademy.ru" method="post" id="feedback-form">
+                <div class="form__user-info">
+                  <h2>Представьтесь:</h2>
+                  <p class="form__item form__item--name">
+                    <label for="user-name">Имя<sup>*</sup>:</label>
+                    <input id="user-name" type="text" name="user-name" placeholder="Петр">
+                  </p>
+                  <p class="form__item form__item--surname">
+                    <label for="user-surname">Фамилия<sup>*</sup>:</label>
+                    <input id="user-surname" type="text" name="user-surname" placeholder="Иванов">
+                  </p>
+                  <p class="form__item form__item--patronymic">
+                    <label for="user-patronymic">Отчество:</label>
+                    <input id="user-patronymic" type="text" name="user-patronymic" placeholder="Александрович">
+                  </p>
+                </div>
+                <div class="form__user-contacts">
+                  <h2>Контактная информация:</h2>
+                  <p class="form__item form__item--phone">
+                    <label for="user-phone"><span>Контактный</span> телефон<sup>*</sup>:</label>
+                    <input id="user-phone" type="text" name="user-phone" placeholder="Введите телефон">
+                  </p>
+                  <p class="form__item form__item--e-mail">
+                    <label for="user-e-mail">Электронная почта<sup>*</sup>:</label>
+                    <input id="user-e-mail" type="text" name="user-e-mail" placeholder="Введите e-mail">
+                  </p>
+                </div>
+                <fieldset class="form__item fieldset fieldset--radio">
+                  <legend class="fieldset__legend">Ваше общее впечатление:</legend>
+                    <ul class="fieldset__list-radio">
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__radio" type="radio" name="type" value="positive" id="filter-positive" checked>
+                        <label for="filter-positive">Скорее положительное</label>
+                      </li>
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__radio" type="radio" name="type" value="negative" id="filter-negative">
+                        <label for="filter-negative">Скорее отрицательное</label>
+                      </li>
+                      <li class="fieldset__item">
+                        <input class="visually-hidden  fieldset__radio" type="radio" name="type" value="no-answer" id="filter-no-answer">
+                        <label for="filter-no-answer">Затрудняюсь ответить</label>
+                      </li>
+                    </ul>
+                </fieldset>
+                <fieldset class="form__item fieldset fieldset--checkbox">
+                  <legend class="fieldset__legend">Посещенные достопримечательности:</legend>
+                    <ul class="fieldset__list-checkbox">
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__checkbox" type="checkbox" name="bridge" id="filter-bridge" checked>
+                        <label for="filter-bridge">Мост Дьявола</label>
+                      </li>
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__checkbox" type="checkbox" name="mountain" id="filter-mountain" checked>
+                        <label for="filter-mountain">Гора-Колокол</label>
+                      </li>
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__checkbox" type="checkbox" name="park" id="filter-park" checked>
+                        <label for="filter-park">Слайд-парк</label>
+                      </li>
+                      <li class="fieldset__item">
+                        <input class="visually-hidden fieldset__checkbox" type="checkbox" name="rock" id="filter-rock">
+                        <label for="filter-rock">Красные скалы</label>
+                      </li>
+                    </ul>
+                </fieldset>
+                <div class="form__feedback">
+                  <p class="form__emotions">Опишите свои эмоции:</p>
+                  <p class="form__textarea"><textarea placeholder="Опишите подробно все свои восторги"></textarea></p>
+                  <p class="form__button"><input type="submit" value="Отправить отзыв"></p>
+                  <p class="form__clarification">  Обязательные поля</p>
+                </div>
+              </form>
+            </div>
+          </section>
         </div>
       </main>
       <footer class="wrapper-shadow__item page-footer">
@@ -78,13 +165,31 @@
           <div class="page-footer__copyright copyright">
             <p class="copyright__item">Разработано</p>
             <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg width="40" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
-                <path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+              <svg width="40" height="50" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="#htmlacademy"></use>
               </svg>
             </a>
           </div>
         </div>
       </footer>
+      <div class="popup-failure">
+        <div class="popup-failure__wrapper">
+          <h2>Что-то пошло не так!</h2>
+          <p class="popup-failure__item">
+            Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+          </p>
+          <p class="popup-failure__button"><input type="submit" value="Ок"></p>
+        </div>
+      </div>
+      <div class="popup-success">
+        <div class="popup-success__wrapper">
+          <h2>Ваш отзыв отправлен!</h2>
+          <p class="popup-success__item">
+            Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.
+          </p>
+          <p class="popup-success__button"><input type="submit" value="Закрыть окно"></p>
+        </div>
+      </div>
     </div>
     <script src="js/script.js"></script>
   </body>
