--- a/source/photo.html
+++ b/source/photo.html
@@ -7,6 +7,11 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <svg style="display: none;">
+      <symbol id="htmlacademy" viewBox="0 0 60 60">
+        <path fill="currentColor" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+      </symbol>
+    </svg>
     <div class="wrapper-shadow">
       <header class="wrapper-shadow__item page-header">
         <div class="page-header__wrapper">
@@ -48,9 +53,12 @@
               <figure class="gallery__figure">
                 <p class="gallery__item-img">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                    <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Вечерняя дорога">
+                    <img src="img/photo-sunset-mobile@1x.jpg 1x, img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Вечерняя дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -64,9 +72,12 @@
               <figure class="gallery__figure">
                 <p class="gallery__item-img">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactust-tablet@2x.jpg 2x">
-                    <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Цветущие кактусы">
+                    <img src="img/photo-cactus-mobile@1x.jpg 1x, img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Цветущие кактусы">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -80,9 +91,12 @@
               <figure class="gallery__figure">
                 <p class="gallery__item-img">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                    <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Извилистая дорога">
+                    <img src="img/photo-roads-mobile@1x.jpg 1x, img/photo-roads-mobile@2x.jpg 2x" width="280" height="280" alt="Извилистая дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -147,8 +161,8 @@
           <div class="page-footer__copyright copyright">
             <p class="copyright__item">Разработано</p>
             <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <svg width="40" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
-                <path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+              <svg width="40" height="50" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="#htmlacademy"></use>
               </svg>
             </a>
           </div>
