--- a/source/photo.html
+++ b/source/photo.html
@@ -58,7 +58,7 @@
                     <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                    <img src="img/photo-sunset-mobile@1x.jpg 1x, img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Вечерняя дорога">
+                    <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280" alt="Вечерняя дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -77,7 +77,7 @@
                     <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactust-tablet@2x.jpg 2x">
-                    <img src="img/photo-cactus-mobile@1x.jpg 1x, img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Цветущие кактусы">
+                    <img src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280" alt="Цветущие кактусы">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -96,7 +96,7 @@
                     <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                    <img src="img/photo-roads-mobile@1x.jpg 1x, img/photo-roads-mobile@2x.jpg 2x" width="280" height="280" alt="Извилистая дорога">
+                    <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" width="280" height="280" alt="Извилистая дорога">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
@@ -110,9 +110,12 @@
               <figure class="gallery__figure">
                 <p class="gallery__item-img">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                    <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Вид каньона">
+                    <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Вид каньона">
                   </picture>
                 </p>
                 <div class="gallery__description-position">
