--- a/source/index.html
+++ b/source/index.html
@@ -114,9 +114,9 @@
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
-                <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg">
-                <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg">
-                <img src="img/bg-map-mobile@1x.jpg 1x" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта штата Аризона">
+                <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg">
+                <img src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта штата Аризона">
               </picture>
             </a>
           </div>
