--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div style="display:none">
       <include src="build/img/sprite.svg">
     </div>
     <div class="wrapper-shadow">
