--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font" crossorigin="anonymus">
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font" crossorigin="anonymus">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
@@ -107,15 +109,8 @@
             <a href="#">Найти гостиницу</a>
           </div>
           <div class="page-main__item map">
-            <a class="map contacts-button-map" href="https://yandex.ru/maps">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
-                <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg">
-                <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg">
-                <img src="img/bg-map-mobile@1x.jpg 1x" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта штата Аризона">
-              </picture>
+            <a class="map contacts-button-map" href="https://yandex.ru/maps/?um=constructor%3Aa886da4efea670ffb9577efd0741944caebbbd56a1876bd39474609551291b46&source=constructorLink">
+              <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa886da4efea670ffb9577efd0741944caebbbd56a1876bd39474609551291b46&amp;source=constructor" width="100%" height="350" frameborder="0"></iframe>
             </a>
           </div>
         </div>
@@ -127,21 +122,21 @@
             <ul class="social__list">
               <li class="social__item social__item--twitter">
                 <a class="social__link" href="https://twitter.com/htmlacademy"><span class="visually-hidden">Мы в Твиттере</span>
-                  <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
                     <use xlink:href="#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item social__item--facebook">
                 <a class="social__link" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span>
-                  <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+                  <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
                     <use xlink:href="#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item social__item--youtube">
                 <a class="social__link" href="#"><span class="visually-hidden">Мы в Ю-Тюбе</span>
-                  <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+                  <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
                     <use xlink:href="#icon-youtube"></use>
                   </svg>
                 </a>
@@ -159,6 +154,7 @@
         </div>
       </footer>
     </div>
+    <script src="https://cdn.rawgit.com/scottjehl/picturefill/3.0.2/dist/picturefill.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
